unpaginate node properties and validation rules endpoints
