# apps/schematic/api/schematic_api/controllers/schema_controller_impl.py
@@ -5,12 +5,9 @@ from schematic.schemas.generator import SchemaGenerator, SchemaExplorer  # type:
 from schematic.visualization.attributes_explorer import AttributesExplorer  # type: ignore
 
 from schematic_api.models.basic_error import BasicError
-from schematic_api.models.node_property import NodeProperty
 from schematic_api.models.node_property_array import NodePropertyArray
-from schematic_api.models.node_property_page import NodePropertyPage
 from schematic_api.models.validation_rule import ValidationRule
 from schematic_api.models.validation_rule_array import ValidationRuleArray
-from schematic_api.models.validation_rule_page import ValidationRulePage
 from schematic_api.models.node import Node
 from schematic_api.models.node_array import NodeArray
 from schematic_api.models.node_page import NodePage
@@ -250,7 +247,7 @@ def get_schema_attributes(schema_url: str) -> tuple[Union[str, BasicError], int]
 def get_node_properties_from_schematic(
     node_label: str,
     schema_url: str,
-) -> list[NodeProperty]:
+) -> list[str]:
     """Gets the properties associated with the node
 
     Args:
@@ -258,16 +255,15 @@ def get_node_properties_from_schematic(
         node_label (str): The label of the node
 
     Returns:
-        list[NodeProperty]: A list of properties of the node
+        list[str]: A list of properties of the node
     """
     schema_explorer = SchemaExplorer()
     schema_explorer.load_schema(schema_url)
-    properties = schema_explorer.find_class_specific_properties(node_label)
-    return [NodeProperty(prop) for prop in properties]
+    return schema_explorer.find_class_specific_properties(node_label)
 
 
 @handle_exceptions
-def get_node_property_array(
+def get_node_properties(
     node_label: str,
     schema_url: str,
 ) -> tuple[Union[NodePropertyArray, BasicError], int]:
@@ -285,43 +281,6 @@ def get_node_property_array(
 
     properties = get_node_properties_from_schematic(node_label, schema_url)
     result: Union[NodePropertyArray, BasicError] = NodePropertyArray(properties)
-    status = 200
-    return result, status
-
-
-@handle_exceptions
-def get_node_property_page(
-    node_label: str,
-    schema_url: str,
-    page_number: int = 1,
-    page_max_items: int = 100000,
-) -> tuple[Union[NodePropertyPage, BasicError], int]:
-    """Gets the properties associated with the node
-
-    Args:
-        schema_url (str): The URL of the schema in jsonld form
-        node_label (str): The label of the node
-        page_number (int): The page number the current request is for
-        page_max_items (int): The maximum number of items per page
-
-    Returns:
-        tuple[Union[NodePropertyPage, BasicError], int]: A tuple
-          The first item is either the node properties or an error object
-          The second item is the response status
-    """
-    # pylint: disable=duplicate-code
-    properties = get_node_properties_from_schematic(node_label, schema_url)
-    page = Page(properties, page_number, page_max_items)
-    property_page = NodePropertyPage(
-        number=page.page_number,
-        size=page.page_max_items,
-        total_elements=page.total_items,
-        total_pages=page.total_pages,
-        has_next=page.has_next,
-        has_previous=page.has_previous,
-        node_properties=page.items,
-    )
-    result: Union[NodePropertyPage, BasicError] = property_page
     status = 200
     return result, status
 
@@ -345,7 +304,7 @@ def get_node_validation_rules_from_schematic(
 
 
 @handle_exceptions
-def get_node_validation_rule_array(
+def get_node_validation_rules(
     node_display: str,
     schema_url: str,
 ) -> tuple[Union[ValidationRuleArray, BasicError], int]:
@@ -366,45 +325,6 @@ def get_node_validation_rule_array(
     result: Union[ValidationRuleArray, BasicError] = ValidationRuleArray(
         validation_rules
     )
-    status = 200
-    return result, status
-
-
-@handle_exceptions
-def get_node_validation_rule_page(
-    node_display: str,
-    schema_url: str,
-    page_number: int = 1,
-    page_max_items: int = 100000,
-) -> tuple[Union[ValidationRulePage, BasicError], int]:
-    """Gets the validation rules associated with the node
-
-    Args:
-        schema_url (str): The URL of the schema in jsonld form
-        node_display(str): The display name of the node
-        page_number (int): The page number the current request is for
-        page_max_items (int): The maximum number of items per page
-
-    Returns:
-        tuple[Union[ValidationRulePage, BasicError], int]: A tuple
-          The first item is either the validation rules or an error object
-          The second item is the response status
-    """
-    # pylint: disable=duplicate-code
-    validation_rules = get_node_validation_rules_from_schematic(
-        node_display, schema_url
-    )
-    page = Page(validation_rules, page_number, page_max_items)
-    rules_page = ValidationRulePage(
-        number=page.page_number,
-        size=page.page_max_items,
-        total_elements=page.total_items,
-        total_pages=page.total_pages,
-        has_next=page.has_next,
-        has_previous=page.has_previous,
-        validation_rules=page.items,
-    )
-    result: Union[ValidationRulePage, BasicError] = rules_page
     status = 200
     return result, status
 
