# apps/schematic/api/schematic_api/models/node_property_array.py
@@ -6,10 +6,8 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from schematic_api.models.base_model_ import Model
-from schematic_api.models.node_property import NodeProperty
 from schematic_api import util
 
-from schematic_api.models.node_property import NodeProperty  # noqa: E501
 
 class NodePropertyArray(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -21,10 +19,10 @@ class NodePropertyArray(Model):
         """NodePropertyArray - a model defined in OpenAPI
 
         :param node_properties: The node_properties of this NodePropertyArray.  # noqa: E501
-        :type node_properties: List[NodeProperty]
+        :type node_properties: List[str]
         """
         self.openapi_types = {
-            'node_properties': List[NodeProperty]
+            'node_properties': List[str]
         }
 
         self.attribute_map = {
@@ -51,7 +49,7 @@ class NodePropertyArray(Model):
         An array of node properties.  # noqa: E501
 
         :return: The node_properties of this NodePropertyArray.
-        :rtype: List[NodeProperty]
+        :rtype: List[str]
         """
         return self._node_properties
 
@@ -62,7 +60,7 @@ class NodePropertyArray(Model):
         An array of node properties.  # noqa: E501
 
         :param node_properties: The node_properties of this NodePropertyArray.
-        :type node_properties: List[NodeProperty]
+        :type node_properties: List[str]
         """
 
         self._node_properties = node_properties
