# apps/schematic/api/schematic_api/openapi/openapi.yaml
@@ -1170,11 +1170,11 @@ paths:
       tags:
       - Schema
       x-openapi-router-controller: schematic_api.controllers.schema_controller
-  /nodes/{nodeDisplay}/validationRuleArray:
+  /nodes/{nodeDisplay}/validationRules:
     get:
       description: "Gets the validation rules, along with the arguments for each given\
         \ rule associated with a given node"
-      operationId: get_node_validation_rule_array
+      operationId: get_node_validation_rules
       parameters:
       - description: The display name of the node in a schema
         explode: false
@@ -1198,47 +1198,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ValidationRuleArray'
-          description: Success
-        "500":
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/BasicError'
-          description: The request cannot be fulfilled due to an unexpected server
-            error
-      summary: "Gets the validation rules, along with the arguments for each given\
-        \ rule associated with a given node"
-      tags:
-      - Schema
-      x-openapi-router-controller: schematic_api.controllers.schema_controller
-  /nodes/{nodeDisplay}/validationRulePage:
-    get:
-      description: "Gets the validation rules, along with the arguments for each given\
-        \ rule associated with a given node"
-      operationId: get_node_validation_rule_page
-      parameters:
-      - description: The display name of the node in a schema
-        explode: false
-        in: path
-        name: nodeDisplay
-        required: true
-        schema:
-          $ref: '#/components/schemas/NodeDisplay'
-        style: simple
-      - description: The URL of a schema in jsonld form
-        explode: true
-        in: query
-        name: schemaUrl
-        required: true
-        schema:
-          $ref: '#/components/schemas/SchemaUrl'
-        style: form
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ValidationRulePage'
           description: Success
         "500":
           content:
@@ -1393,10 +1352,10 @@ paths:
       tags:
       - Schema
       x-openapi-router-controller: schematic_api.controllers.schema_controller
-  /nodes/{nodeLabel}/nodePropertyArray:
+  /nodes/{nodeLabel}/nodeProperties:
     get:
       description: Gets properties associated with a given node
-      operationId: get_node_property_array
+      operationId: get_node_properties
       parameters:
       - description: The label of the source node in a schema to get the dependencies
           of
@@ -1421,67 +1380,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NodePropertyArray'
-          description: Success
-        "500":
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/BasicError'
-          description: The request cannot be fulfilled due to an unexpected server
-            error
-      summary: Gets properties associated with a given node
-      tags:
-      - Schema
-      x-openapi-router-controller: schematic_api.controllers.schema_controller
-  /nodes/{nodeLabel}/nodePropertyPage:
-    get:
-      description: Gets properties associated with a given node
-      operationId: get_node_property_page
-      parameters:
-      - description: The label of the source node in a schema to get the dependencies
-          of
-        explode: false
-        in: path
-        name: nodeLabel
-        required: true
-        schema:
-          $ref: '#/components/schemas/NodeLabel'
-        style: simple
-      - description: The URL of a schema in jsonld form
-        explode: true
-        in: query
-        name: schemaUrl
-        required: true
-        schema:
-          $ref: '#/components/schemas/SchemaUrl'
-        style: form
-      - description: The page number to get for a paginated query
-        explode: true
-        in: query
-        name: pageNumber
-        required: false
-        schema:
-          default: 1
-          minimum: 1
-          type: integer
-        style: form
-      - description: "The maximum number of items per page (up to 100,000) for paginated\
-          \ endpoints"
-        explode: true
-        in: query
-        name: pageMaxItems
-        required: false
-        schema:
-          default: 100000
-          minimum: 1
-          type: integer
-        style: form
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/NodePropertyPage'
           description: Success
         "500":
           content:
@@ -2757,44 +2655,21 @@ components:
       description: The display name of a node in a schema
       example: MolecularEntity
       type: string
-    NodeProperty:
-      description: A node property
-      example:
-        name: molecularlyInteractsWith
-      properties:
-        name:
-          description: The name of the property
-          example: molecularlyInteractsWith
-          title: name
-          type: string
-      required:
-      - name
-      title: NodeProperty
-      type: object
     NodePropertyArray:
       description: An array of node properties.
       example:
         node_properties:
-        - name: molecularlyInteractsWith
-        - name: molecularlyInteractsWith
+        - node_properties
+        - node_properties
       properties:
         node_properties:
           description: An array of node properties.
           items:
-            $ref: '#/components/schemas/NodeProperty'
+            type: string
           title: node_properties
           type: array
       title: NodePropertyArray
       type: object
-    NodePropertyPage:
-      allOf:
-      - $ref: '#/components/schemas/PageMetadata'
-      - $ref: '#/components/schemas/NodePropertyPage_allOf'
-      description: A page of node properties.
-      title: NodePropertyPage
-      type: object
-      x-java-class-annotations:
-      - '@lombok.Builder'
     UseStrictCamelCase:
       default: true
       description: Whether or not to use the more strict way of converting to camel
@@ -2836,15 +2711,6 @@ components:
           type: array
       title: ValidationRuleArray
       type: object
-    ValidationRulePage:
-      allOf:
-      - $ref: '#/components/schemas/PageMetadata'
-      - $ref: '#/components/schemas/ValidationRulePage_allOf'
-      description: A page of validation rules.
-      title: ValidationRulePage
-      type: object
-      x-java-class-annotations:
-      - '@lombok.Builder'
     ComponentLabel:
       description: The label of a component in a schema
       example: MolecularEntity
@@ -3002,32 +2868,6 @@ components:
       required:
       - nodes
       title: NodePage_allOf
-      type: object
-      example: null
-    NodePropertyPage_allOf:
-      properties:
-        node_properties:
-          description: An array of node properties.
-          items:
-            $ref: '#/components/schemas/NodeProperty'
-          title: node_properties
-          type: array
-      required:
-      - node_properties
-      title: NodePropertyPage_allOf
-      type: object
-      example: null
-    ValidationRulePage_allOf:
-      properties:
-        validation_rules:
-          description: An array of validation rules.
-          items:
-            $ref: '#/components/schemas/ValidationRule'
-          title: validation_rules
-          type: array
-      required:
-      - validation_rules
-      title: ValidationRulePage_allOf
       type: object
       example: null
     ConnectedNodePairPage_allOf:
